Fixed alignment issue in dashboard view mode and removed gadget properties from anon. dashboards

--- a/apps/portal/css/dashboard.css
+++ b/apps/portal/css/dashboard.css
@@ -50,29 +50,41 @@
     .container .gadgets-grid {
         padding: 40px 0 0 0;
     }
+    
+    .page-header .container-fluid {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
 }
 
 .gadget-title {
     width: calc(100% - 110px);
 }
 
+.page-title h1 span {
+    font-size: 16px;
+    display: inline-block
+}
+
 .page-title h1 span a {
     color: #aaa;
-    display: inline-block
+    display: inline-block;
+    float: right;
 }
 
 .page-title h1 span a:hover {
     color: #000;
 }
 
-@media screen and (max-width: 767px) {
-    .page-header > .page-title {
-        float: none;
-    }
+.dashboard .page-header .page-title > h1 {
+    padding: 20px 0;
+    font-size: 25px;
 }
 
-.page-title h1 span {
-    font-size: 16px;
+.page-header .page-title > h1 {
+    margin: 0;
+    font-size: 20px;
+    font-weight: 400;
 }
 
 /**
